<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HorasTrabalhadas</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="nome">Nome</string>
    <string name="senha">Senha</string>
    <string name="submit">submit</string>
    <string name="close">Close</string>
    <string name="add_activity">Add Activity</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="description_missing">Description is missing</string>
</resources>